--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react": "^19.2.4",
     "lucide-react": "^0.566.0",
     "@google/genai": "^1.41.0",
-    "react-dom": "^19.2.4"
+    "react-dom": "^19.2.4",
+    "jspdf": "2.5.1",
+    "html2canvas": "1.4.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
